name: Steno
version: 0.0.1
cabal-version: 1.12
build-type: Simple
license: MIT
license-file: LICENSE
maintainer: charles.stpierre@gmail.com
author: Charles

library

    if os(windows)
        build-depends:
            base -any,
            text -any,
            Win32 -any
        extra-libraries:
            msvcrt
        includes:
            conio.h
    else
        build-depends:
            base -any,
            text -any
    exposed-modules:
        Tampon
    default-language: Haskell2010
    hs-source-dirs: src
    other-modules:
        GetChar
    ghc-options: -Wall

executable Steno
    main-is: Main.hs
    build-depends:
        base -any,
        text -any,
        ansi-terminal -any,
        terminal-size -any
    default-language: Haskell2010
    hs-source-dirs: app src
    other-modules:
        Tampon
        Types

test-suite TamponTest
    type: exitcode-stdio-1.0
    main-is: TamponTests.hs
    build-depends:
        base -any,
        text -any,
        QuickCheck -any,
        hspec -any
    default-language: Haskell2010
    hs-source-dirs: test src
    other-modules:
        Tampon
